// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Badge Deploy 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <span
    className="sc-AxjAm hrzWhy"
  >
    hello
  </span>
</div>
`;

exports[`Storyshots Components/Badge Setting 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <span
    className="sc-AxjAm hrzWhy"
  >
    hello
  </span>
   
  <span
    className="sc-AxjAm hrzWhy"
  >
    hello
  </span>
   
  <span
    className="sc-AxjAm hrzWhy"
  >
    hello
  </span>
   
  <span
    className="sc-AxjAm hrzWhy"
  >
    hello
  </span>
</div>
`;

exports[`Storyshots Components/Brand Amimoto 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <span
    className="logo--shifter logo-amimoto-mark logomark-color"
    style={
      Object {
        "display": "inline-block",
        "height": "45px",
        "width": "auto",
      }
    }
  >
    <svg
      height="45"
      viewBox="0 0 70.01 70.49"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fillRule="evenodd"
      >
        <path
          d="M103.77 193.7c-3 7.07-3 7.08-5.84 14.3-4.75-4.08-6-5.52-9-10 7.01-2 7.01-2 14.84-4.3z"
          data-name="Logomark"
          fill="#00a8ff"
          transform="translate(-84.07 -144.75)"
        />
        <path
          d="M113.89 168.62c-4.63 11.35-4.63 11.36-8.57 21-9.11 2.58-9.12 2.57-17.9 5.09-2.85-5-3.86-14.42-3.12-17.63 13.03-3.67 13.08-3.69 29.59-8.46z"
          data-name="Logomark"
          fill="#00a8ff"
          transform="translate(-84.07 -144.75)"
        />
        <path
          d="M109.41 146.09c-5 12.11-5 12.13-9.54 22.92-7.39 2-7.39 2-15.18 4.31 2.96-12.52 10.03-22.72 24.72-27.23z"
          data-name="Logomark"
          fill="#00a8ff"
          transform="translate(-84.07 -144.75)"
        />
        <path
          d="M113.5 145.11c10.47-1.46 22.85 1.43 31.53 11.17C124.42 162 124.42 162 104 167.83c5.28-12.97 5.29-12.97 9.5-22.72z"
          data-name="Logomark"
          fill="#05f"
          transform="translate(-84.07 -144.75)"
        />
        <path
          d="M118.17 167.44c9.83-2.84 9.79-2.92 21-6.07-10.46 25.42-10.46 25.42-22 53.68a32.94 32.94 0 01-16.32-5.05c9.35-22.71 9.36-22.71 17.32-42.56z"
          data-name="Logomark"
          fill="#05f"
          transform="translate(-84.07 -144.75)"
        />
        <path
          d="M145 156.28a36.8 36.8 0 018.95 27c-10.75 3.05-10.75 3.05-22.58 6.47 6-14.57 6-14.58 13.63-33.47z"
          data-name="Logomark"
          fill="#004cd3"
          transform="translate(-84.07 -144.75)"
        />
        <path
          d="M153.4 187c-2.42 13.4-14.87 27-32.51 28.21 4.68-11.26 4.68-11.34 9-21.55C141 190.6 141 190.6 153.4 187z"
          data-name="Logomark"
          fill="#004cd3"
          transform="translate(-84.07 -144.75)"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Storyshots Components/Brand Digital Cube 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <span
    className="logo--shifter logo-dc-mark logomark-color"
    style={
      Object {
        "display": "inline-block",
        "height": "45px",
        "width": "auto",
      }
    }
  >
    <svg
      height="45"
      viewBox="0 0 50.47 67.28"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M16.82 16.82L0 16.82 0 33.65 0 50.45 0 50.47 0 67.28 50.47 67.28 50.47 50.47 50.47 50.45 50.47 33.65 33.65 33.65 33.65 50.45 16.82 50.45 16.82 33.65 33.65 33.65 33.65 16.82 16.82 16.82z"
        />
        <path
          d="M33.65 0H50.47V16.82H33.65z"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Storyshots Components/Brand Shifter 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <span
    className="logo--shifter logo-shifter-mark logomark-color"
    style={
      Object {
        "display": "inline-block",
        "height": "45px",
        "width": "auto",
      }
    }
  >
    <svg
      height="45"
      viewBox="0 0 32 43"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <path
        d="M0,9.94143526 L9.17661538,9.94143526 L9.17661538,0.351892977 L0,0.351892977 L0,9.94143526 Z M22.4386813,11.2282848 L22.4386813,21.0343201 L31.4134505,11.2282848 L22.4386813,11.2282848 Z M11.872,28.9708094 L18.0286593,28.9708094 L18.0286593,11.2282848 L11.872,11.2282848 L11.872,28.9708094 Z M1.29406593,17.2346832 C1.29406593,19.135786 2.76887912,20.677657 4.58830769,20.677657 C6.40773626,20.677657 7.88254945,19.135786 7.88254945,17.2346832 C7.88254945,15.3335805 6.40773626,13.7920764 4.58830769,13.7920764 C2.76887912,13.7920764 1.29406593,15.3335805 1.29406593,17.2346832 Z M5.13934066,31.945204 C5.13934066,37.6074152 9.53178022,42.1978022 14.949978,42.1978022 C20.3688791,42.1978022 24.760967,37.6074152 24.760967,31.945204 L5.13934066,31.945204 Z"
        id="path-2"
        style={
          Object {
            "fill": "#F80A5B",
          }
        }
      />
      <g
        fill="none"
        fillRule="evenodd"
        id="Symbols"
      >
        <g
          id="shifter-logo-full-color"
        >
          <g
            id="Group-6"
          >
            <mask
              fill="#fff"
              id="mask-3"
            >
              <use
                xlinkHref="#path-2"
              />
            </mask>
            <use
              fill="#F80A5B"
              id="Clip-5"
              xlinkHref="#path-2"
            />
          </g>
        </g>
      </g>
    </svg>
  </span>
</div>
`;

exports[`Storyshots Components/Button Amimoto 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <a
    className="sc-AxirZ kGzhvt"
    color="primary"
    href="https://galaxy.digitalcube.jp"
  >
    Don't Panic.
  </a>
</div>
`;

exports[`Storyshots Components/Button Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <a
    className="sc-AxirZ kGzhvt"
    color="primary"
    href="https://galaxy.digitalcube.jp"
  >
    Don't Panic.
  </a>
</div>
`;

exports[`Storyshots Components/Card Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="sc-Axmtr birpBT"
  >
    <div
      className="sc-AxiKw hlbMOm"
    >
      Image
    </div>
    <div
      className="sc-AxhUy kPzvGn"
    >
      <h2
        className="sc-AxhCb ccMvAG"
      >
        Don't Panic.
      </h2>
    </div>
    <div
      className="sc-AxgMl iBbARd"
    >
      So long and thanks for all the fish. 🐬
    </div>
    <div
      className="sc-AxheI bMxfpb"
    >
      42
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Heading Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <h2
    className="sc-AxhCb ccMvAG"
  >
    I could calculate your chance of survival, but you won’t like it.” –Marvin
  </h2>
</div>
`;

exports[`Storyshots Components/Post Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="sc-Axmtr birpBT"
  >
    <div
      className="sc-AxiKw hlbMOm"
    >
      <img
        alt=""
        src="//placehold.it/600x400"
      />
    </div>
    <div
      className="sc-AxhUy kPzvGn"
    >
      <h2
        className="sc-AxhCb ccMvAG"
      >
        
      </h2>
      
      
    </div>
    <div
      className="sc-AxgMl iBbARd"
    >
      <h2
        className="sc-AxhCb ccMvAG"
      >
        Announcing the Shifter Gatsby Recipe
      </h2>
      July 31
    </div>
    <div
      className="sc-AxheI bMxfpb"
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Post List Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <div>
      <div />
    </div>
    <div>
      <div>
        <div
          className="sc-Axmtr birpBT"
        >
          <div
            className="sc-AxiKw hlbMOm"
          >
            <img
              alt=""
              src="//placehold.it/600x400"
            />
          </div>
          <div
            className="sc-AxhUy kPzvGn"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              
            </h2>
            
            
          </div>
          <div
            className="sc-AxgMl iBbARd"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              New Article: The Role of Stable Value in Each Stage of the Savings Journey
            </h2>
            July 31
          </div>
          <div
            className="sc-AxheI bMxfpb"
          >
            
          </div>
        </div>
      </div>
      <div>
        <div
          className="sc-Axmtr birpBT"
        >
          <div
            className="sc-AxiKw hlbMOm"
          >
            <img
              alt=""
              src="//placehold.it/600x400"
            />
          </div>
          <div
            className="sc-AxhUy kPzvGn"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              
            </h2>
            
            
          </div>
          <div
            className="sc-AxgMl iBbARd"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              The State of Stable Value and its Evolving Role in Modern DC Plan Design
  
            </h2>
            July 31
          </div>
          <div
            className="sc-AxheI bMxfpb"
          >
            
          </div>
        </div>
      </div>
      <div>
        <div
          className="sc-Axmtr birpBT"
        >
          <div
            className="sc-AxiKw hlbMOm"
          >
            <img
              alt=""
              src="//placehold.it/600x400"
            />
          </div>
          <div
            className="sc-AxhUy kPzvGn"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              
            </h2>
            
            
          </div>
          <div
            className="sc-AxgMl iBbARd"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              401(k) investors flee to safety in 2020
            </h2>
            July 31
          </div>
          <div
            className="sc-AxheI bMxfpb"
          >
            
          </div>
        </div>
      </div>
      <div>
        <div
          className="sc-Axmtr birpBT"
        >
          <div
            className="sc-AxiKw hlbMOm"
          >
            <img
              alt=""
              src="//placehold.it/600x400"
            />
          </div>
          <div
            className="sc-AxhUy kPzvGn"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              
            </h2>
            
            
          </div>
          <div
            className="sc-AxgMl iBbARd"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              Why ERISA Advisors Should (Really) Consider Stable Value Funds
            </h2>
            July 31
          </div>
          <div
            className="sc-AxheI bMxfpb"
          >
            
          </div>
        </div>
      </div>
      <div>
        <div
          className="sc-Axmtr birpBT"
        >
          <div
            className="sc-AxiKw hlbMOm"
          >
            <img
              alt=""
              src="//placehold.it/600x400"
            />
          </div>
          <div
            className="sc-AxhUy kPzvGn"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              
            </h2>
            
            
          </div>
          <div
            className="sc-AxgMl iBbARd"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              The Shock-Absorbing Retirement Fund
            </h2>
            July 31
          </div>
          <div
            className="sc-AxheI bMxfpb"
          >
            
          </div>
        </div>
      </div>
      <div>
        <div
          className="sc-Axmtr birpBT"
        >
          <div
            className="sc-AxiKw hlbMOm"
          >
            <img
              alt=""
              src="//placehold.it/600x400"
            />
          </div>
          <div
            className="sc-AxhUy kPzvGn"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              
            </h2>
            
            
          </div>
          <div
            className="sc-AxgMl iBbARd"
          >
            <h2
              className="sc-AxhCb ccMvAG"
            >
              Press Release: Stable Value Nets $50 Billion in Inflows Amid 1Q2020 Market Turbulence
            </h2>
            July 31
          </div>
          <div
            className="sc-AxheI bMxfpb"
          >
            
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
